--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!----CREATED BY MEHMET KAHYA - 5.05.2023. - Last Updated: 9.05.2023-->
+<!----CREATED BY MEHMET KAHYA - 5.05.2023 - Last Updated: 18.05.2023-->
 <html>
 
 <head>
@@ -13,13 +13,43 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <title>Random Strangest Location🕵️</title>
   <link rel="stylesheet" src="style.css">
+  
 </head>
 
+<script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="mehmetkahy1" data-color="#FFDD00" data-emoji="" data-font="Arial" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
 
 <div style="display: flex; justify-content: center; align-items: center; height: 90%;">
   <button id="random-location-button">Random Strangest Location 🕵️</button>
 </div>
 
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import {initializeApp} from "https://www.gstatic.com/firebasejs/9.21.0/firebase-app.js";
+  import {getAnalytics} from "https://www.gstatic.com/firebasejs/9.21.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyDAEtOQaXvhWjAXUOZo5bYdEEUpZOJUlLQ",
+    authDomain: "randomstrangestlocations.firebaseapp.com",
+    projectId: "randomstrangestlocations",
+    storageBucket: "randomstrangestlocations.appspot.com",
+    messagingSenderId: "279815180146",
+    appId: "1:279815180146:web:f43ed824f5e413fe9c97eb",
+    measurementId: "G-586X6ELWSN"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
+<script type="text/javascript">
+  document.addEventListener("contextmenu", function (e) {
+    e.preventDefault();
+  }, false);
+</script>
 
 <div class="pop-up">
   <p style="color: rgb(0, 0, 0);">❗️ Announce:  I solved location sharing bug. Now Google Maps does not want your location. </p>
@@ -27,7 +57,7 @@
 
 <p
   style="font-family:monospace;font-weight: bold;font-size: larger; display: flex; justify-content: center; align-items: center; height: 0.1vh; color: #E4E5EB;">
-  [ Mehmet Kahya - open source - there are 29 locations on the site at now - I'll add more locations soon.]</p>
+  [ Mehmet Kahya - open source - there are 29 locations on the site at now - I'll add more locations soon.<a href="mailto:mehmetkahyakas5@gmail.com" target="_blank" style="font-family: monospace; font-size: large; color: rgb(185, 1, 1); font-weight:bolder;">Report an interesting location!</a>]</p>
 <div class="contact">
   <a href="https://www.twitter.com" target="_blank"><i class='fab fa-twitter'></i></a>
   <a href="https://github.com/mehmetkahya0" target="_blank"><i class='fab fa-github'></i></a>
@@ -214,13 +244,7 @@
         lng: -123.008573,
       }
     },
-    {
-      name: "Island in a Lake in an Island in a Lake",
-      coordinates: {
-        lat: 69.793000,
-        lng: -108.241000,
-      }
-    },
+
     {
       name: "Russian Hexagonal Warehouses",
       coordinates: {
@@ -245,5 +269,6 @@
     window.open(url, "_blank");
   });
 </script>
+
 </body>
 </html>
