--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   // Your web app's Firebase configuration
   // For Firebase JS SDK v7.20.0 and later, measurementId is optional
   const firebaseConfig = {
-    apiKey: "AIzaSyDAEtOQaXvhWjAXUOZo5bYdEEUpZOJUlLQ",
+    apiKey: GOOGLEAPIKEY,
     authDomain: "randomstrangestlocations.firebaseapp.com",
     projectId: "randomstrangestlocations",
     storageBucket: "randomstrangestlocations.appspot.com",
