--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     authDomain: "randomstrangestlocations.firebaseapp.com",
     projectId: "randomstrangestlocations",
     storageBucket: "randomstrangestlocations.appspot.com",
-    messagingSenderId: "279815180146",
-    appId: "1:279815180146:web:f43ed824f5e413fe9c97eb",
+    messagingSenderId: SENDERID,
+    appId: APPID,
     measurementId: "G-586X6ELWSN"
   };
 
